--- a/index.html
+++ b/index.html
@@ -76,7 +76,68 @@
 
       /* Animação flutuante */
       animation: floatHeader 3s ease-in-out infinite;
+
+      display: flex;
+      justify-content: space-around;
     }
+
+
+    .sgeek {
+      display: flex;
+      flex-direction: row;
+      box-shadow: 2px 2px 10px #ffffff4f;
+      border-radius: 15px;
+      background-color: #000;
+      justify-content: center;
+      align-items: center;
+      padding: 0px 5px;
+      transition: 0.3s ease;
+      cursor: pointer;
+      color: #fff;
+
+      &:hover {
+        transform: scale(1.15);
+      }
+    }
+
+    .geektext {
+      margin: 5px;
+      padding: 10px;
+      font-weight: bold;
+      text-decoration: underline;
+      text-underline-offset: 3px;
+      font-size: 18px;
+    }
+
+    .r {
+      margin-top: 3px;
+      color: red;
+    }
+
+    header img {
+      width: 65px;
+      height: 65px;
+      margin-left: 5px;
+    }
+
+    .gamelogo img {
+      width: 90px;
+      height: 90px;
+    }
+
+    .sgeek {
+      padding: 10px;
+      max-width: 200px;
+      align-self: center;
+    }
+
+    header img {
+      width: 256px;
+      max-width: 95%;
+      filter: drop-shadow(0px 0px 12px black);
+      user-select: none;
+    }
+
 
     @keyframes floatHeader {
       0% {
@@ -214,6 +275,20 @@
         grid-template-columns: 1fr;
       }
 
+      .grid {
+        grid-template-columns: 1fr;
+      }
+
+      header h1 {
+        font-size: 2rem;
+      }
+
+      header {
+        display: flex;
+        flex-direction: column;
+
+      }
+
       .zoom-img {
         width: 90%;
       }
@@ -253,8 +328,23 @@
 <div class="red-overlay" id="red3"></div>
 
 <body>
+  <header>
+    <a class="sgeek" href="https://wa.me/551635110871?text=Ol%C3%A1,%20gostaria%20de%20agendar%20uma%20aula%20demo."
+      target="_blank">
 
-  <header>A GRANDE AVENTURA POKÉMON</header>
+      <img src="supergeeks.png" alt="logo-supergeeks">
+
+      <div class="geektext">
+        <p class="b">Matrículas</p>
+        <p class="r">Abertas</p>
+      </div>
+
+    </a>
+    <h1>A Grande Batalha Pokémon!</h1>
+    <div class="gamelogo">
+      <img src="logo.png" alt="logo do jogo">
+    </div>
+  </header>
 
   <main>
 
@@ -314,7 +404,7 @@
           box.classList.remove('closed');
           return;
         }
-        else{
+        else {
           box.classList.add('closed')
         }
 
