--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     header {
       background: linear-gradient(135deg, var(--pk-blue-dark), var(--pk-blue));
       color: white;
-      padding: 1.5rem;
+      padding: 20px;
       text-align: center;
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 1.4rem;
       letter-spacing: 1px;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 
