--- a/index.html
+++ b/index.html
@@ -410,6 +410,12 @@
 
       });
     });
+    
+    //Inserir link
+    document.querySelector("button").addEventListener("click", () => {
+      window.open("https://google.com.br", "_blank");
+    });
+
   </script>
 
 </body>
