--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     
     //Inserir link
     document.querySelector("button").addEventListener("click", () => {
-      window.open("https://google.com.br", "_blank");
+      window.open("https://gd.games/instant-builds/203e70a4-87aa-4862-9a38-fdeb678e0670", "_blank");
     });
 
   </script>
