--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Site Pokémon</title>
+  <title>A Grande Batalha Pokémon!</title>
 
   <style>
     :root {
